[package]
name = "ein"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "U.S. Employer Identification Number (EIN) parsing and validation"
repository = "https://github.com/gideonsolutions/ein"
keywords = ["ein", "employer-id", "tax", "validation"]
categories = ["parsing", "value-formatting"]
documentation = "https://docs.rs/ein"

[dependencies]
regex = "1"
thiserror = "2"
